cachelab-handout/cache/compile.log
cache.c: In function ‘find_cache_line’:
cache.c:49:48: error: incompatible types when returning type ‘CacheLine’ but ‘CacheLine *’ was expected
   49 |                         return target_set.lines[i];
      |                                ~~~~~~~~~~~~~~~~^~~
cache.c: In function ‘access_cache_word’:
cache.c:62:37: error: invalid operands to binary + (have ‘CacheBlock’ and ‘size_t’ {aka ‘long unsigned int’})
   62 |                 return (line->block + offset)
      |                         ~~~~~~~~~~~ ^
      |                             |
      |                             CacheBlock
cache.c:62:46: error: expected ‘;’ before ‘}’ token
   62 |                 return (line->block + offset)
      |                                              ^
      |                                              ;
   63 |         }
      |         ~                                     
cache.c: At top level:
cache.c:68:6: error: conflicting types for ‘copy_block’; have ‘void(CacheBlock,  CacheBlock)’
   68 | void copy_block(CacheBlock memory_block, CacheBlock cache_block){
      |      ^~~~~~~~~~
In file included from cache.c:4:
cache.h:36:6: note: previous declaration of ‘copy_block’ with type ‘void(CacheBlock,  CacheBlock,  int)’
   36 | void copy_block(CacheBlock dest_block, CacheBlock src_block, int block_size);
      |      ^~~~~~~~~~
cache.c: In function ‘copy_block’:
cache.c:71:24: error: ‘dest_block’ undeclared (first use in this function)
   71 |                 memcpy(dest_block.data, src_block.data, block_size);
      |                        ^~~~~~~~~~
cache.c:71:24: note: each undeclared identifier is reported only once for each function it appears in
cache.c:71:41: error: ‘src_block’ undeclared (first use in this function); did you mean ‘cache_block’?
   71 |                 memcpy(dest_block.data, src_block.data, block_size);
      |                                         ^~~~~~~~~
      |                                         cache_block
cache.c: In function ‘free_cache’:
cache.c:108:22: error: ‘j’ undeclared (first use in this function)
  108 |                 for (j = 0; j < cache->num_lines_per_set; j++){
      |                      ^
cache.c: In function ‘insert_cache_line’:
cache.c:114:1: error: expected declaration or statement at end of input
  114 | }
      | ^
